--- a/01.Pre-Bootcamp/02.Ninja_II/index.html
+++ b/01.Pre-Bootcamp/02.Ninja_II/index.html
@@ -1,67 +1,74 @@
 <html>
-    <body>
-		<div id='background'>
-			<div id='character' style='position:absolute; top:250px; left:250px; background-image: url("img/down1.png"); width:59px; height:86px;'></div>
+	<body>
+		<div id="background">
+			<div
+				id="character"
+				style="
+					position: absolute;
+					top: 250px;
+					left: 250px;
+					background-image: url('img/down1.png');
+					width: 59px;
+					height: 86px;
+				"
+			></div>
 		</div>
-    <script type="text/javascript">
-	    var leftValue = 250, topValue = 250, direction = "", dirValue = 1;
+		<script type="text/javascript">
+			var leftValue = 250,
+				topValue = 250,
+				direction = "",
+				dirValue = 1;
 
-    	function update(){
-    		document.getElementById("character").style.left 
-			= leftValue+"px";
-    		document.getElementById("character").style.top 
-			= topValue+"px";
-			document.getElementById("character").style.backgroundImage
-			= "url('img/"+direction+dirValue+".png')";
-    	}
+			function update() {
+				document.getElementById("character").style.left = leftValue + "px";
+				document.getElementById("character").style.top = topValue + "px";
+				document.getElementById("character").style.backgroundImage =
+					"url('img/" + direction + dirValue + ".png')";
+			}
 
-    	document.onkeydown = function(e){
-    		console.log(e);
-			if (dirValue == 1){
-                    dirValue = 2;
-                }
-                else if (dirValue == 2){
-                    dirValue = 1;
-                }
-    		if(e.keyCode == 37) { // LEFT
-				direction = "left";
-				if(leftValue == 0){
-					leftValue = 0;
+			document.onkeydown = function (e) {
+				console.log(e);
+				if (dirValue == 1) {
+					dirValue = 2;
+				} else if (dirValue == 2) {
+					dirValue = 1;
 				}
-				else{
-					leftValue = leftValue - 10;
-				} 					
-    		}
-    		else if (e.keyCode == 39) { // RIGHT
-				direction = "right";
-    			if(leftValue == 500){
-					leftValue = 500;
+				if (e.keyCode == 37) {
+					// LEFT
+					direction = "left";
+					if (leftValue == 0) {
+						leftValue = 0;
+					} else {
+						leftValue = leftValue - 10;
+					}
+				} else if (e.keyCode == 39) {
+					// RIGHT
+					direction = "right";
+					if (leftValue == 500) {
+						leftValue = 500;
+					} else {
+						leftValue = leftValue + 10;
+					}
+				} else if (e.keyCode == 40) {
+					// DOWN
+					direction = "down";
+					if (topValue == 500) {
+						topValue = 500;
+					} else {
+						topValue = topValue + 10;
+					}
+				} else if (e.keyCode == 38) {
+					// UP
+					direction = "top";
+					if (topValue == 0) {
+						topValue = 0;
+					} else {
+						topValue = topValue - 10;
+					}
 				}
-				else{
-					leftValue = leftValue + 10;
-				}
-    		}
-    		else if (e.keyCode == 40) { // DOWN
-				direction = "down";
-				if(topValue == 500){
-					topValue = 500;
-				}
-				else{
-					topValue = topValue + 10;
-				}
-    		}
-			else if (e.keyCode == 38) { // UP
-				direction = "top";
-				if(topValue == 0){
-					topValue = 0;
-				}
-				else{
-				topValue = topValue - 10;
-				}
-    		}
-    		// ...
-    		update();
-    	}
-    </script>
-</body>
+				// ...
+				update();
+			};
+		</script>
+	</body>
 </html>
