--- a/01.Pre-Bootcamp/04.Airplane/index.html
+++ b/01.Pre-Bootcamp/04.Airplane/index.html
@@ -1,72 +1,74 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Airplane Master</title>
-	<style type="text/css">
-		#ocean{
-			background-image: url("master/ocean.jpg");
-			width: 900px;
-			height: 700px;
-		}
-		.player{
-			position: absolute;
-			width: 70px;
-			height: 75px;
-			background-image: url("master/player.png");
-		}
-		.enemy{
-			position: absolute;
-			width: 70px;
-			height: 75px;
-			background-image: url("master/enemy.png");
-		}
-	</style>
-</head>
-<body>
-
-	<div id="ocean">
-		<div id="players">
-			<div id="player"></div>
+	<head>
+		<title>Airplane Master</title>
+		<style type="text/css">
+			#ocean {
+				background-image: url("master/ocean.jpg");
+				width: 900px;
+				height: 700px;
+			}
+			.player {
+				position: absolute;
+				width: 70px;
+				height: 75px;
+				background-image: url("master/player.png");
+			}
+			.enemy {
+				position: absolute;
+				width: 70px;
+				height: 75px;
+				background-image: url("master/enemy.png");
+			}
+		</style>
+	</head>
+	<body>
+		<div id="ocean">
+			<div id="players">
+				<div id="player"></div>
+			</div>
+			<div id="enemies">
+				<div id="enemy"></div>
+			</div>
 		</div>
-		<div id="enemies">
-			<div id="enemy"></div>
-		</div>
-	</div>
 
-	<script type="text/javascript">
-		
-		var player = {
-			left:450,
-			top: 620
-		}
+		<script type="text/javascript">
+			var player = {
+				left: 450,
+				top: 620,
+			};
 
-		var enemy = [
-			{left:350, top: 200},
-			{left:450, top: 250}
-		]
+			var enemy = [
+				{ left: 350, top: 200 },
+				{ left: 450, top: 250 },
+			];
 
-		function drawplayer(){
-			content = "<div class='player' style='left:"+player.left+
-			"px; top:"+player.top+"px'></div>";
-			document.getElementById("players").innerHTML = content;
-		}
-		drawplayer()
+			function drawplayer() {
+				content =
+					"<div class='player' style='left:" +
+					player.left +
+					"px; top:" +
+					player.top +
+					"px'></div>";
+				document.getElementById("players").innerHTML = content;
+			}
+			drawplayer();
 
-		document.onkeydown = function(e){
-			if(e.keyCode == 37){
-				player.left = player.left-10;
-			}
-			if(e.keyCode == 39){
-				player.left = player.left+10;
-			}
-			if(e.keyCode == 38){
-				player.top = player.top-10;
-			}
-			if(e.keyCode == 40){
-				player.top = player.top+10;
-			}
-			drawplayer()
-		}
-	</script>
-</body>
+			document.onkeydown = function (e) {
+				if (e.keyCode == 37) {
+					player.left = player.left - 10;
+				}
+				if (e.keyCode == 39) {
+					player.left = player.left + 10;
+				}
+				if (e.keyCode == 38) {
+					player.top = player.top - 10;
+				}
+				if (e.keyCode == 40) {
+					player.top = player.top + 10;
+				}
+				drawplayer();
+			};
+		</script>
+	</body>
 </html>
