--- a/02.Fundamentos_De_La_Web/Asignaciones/CSS/02.Button/index.html
+++ b/02.Fundamentos_De_La_Web/Asignaciones/CSS/02.Button/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+<head>    
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Button Styling</title>
 </head>
 <body>
+    <div class="search">
+        <p>Search</p>
+    </div>
+
+    <div class="plus">
+        <p>+</p>
+    </div>    
     
+    <div class="account">
+        <p>Create Account</p>
+    </div>
 </body>
 </html>
