--- a/02.Fundamentos_De_La_Web/02.CSS/08.Profile/index.html
+++ b/02.Fundamentos_De_La_Web/02.CSS/08.Profile/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="UTF-8">
 		<link
 			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="stylesheet" type="text/css" href="style.css" />
+			rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<title>Document</title>
 	</head>
 	<body>
@@ -17,19 +17,19 @@
 			<div class="info">
 				<h1>Jane Doe</h1>
 			</div>
-			<br />
+			<br>
 			<div class="info">
 				<div class="img-2"></div>
 				<p>Seattle</p>
 			</div>
-			<br />
+			<br>
 			<div class="info">
 				<p>Developer | Engineer | Problem Solver</p>
 			</div>
 			<div class="info">
 				<p>Masters of shadows and the internet</p>
 			</div>
-			<br />
+			<br>
 			<div class="info">
 				<div class="img-3"></div>
 				<a href="">edit profile</a>
