--- a/02.Fundamentos_De_La_Web/02.CSS/09.Profile_Page/index.html
+++ b/02.Fundamentos_De_La_Web/02.CSS/09.Profile_Page/index.html
@@ -1,128 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-			rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<title>Profile</title>
-	</head>
-	<body>
-		<div class="nav">
-			<h1 class="nav-title">
-				Perfil				
-			</h1>	
-			<ul class="nav-links">
-				<li><a href="#">Inicio</a></li>
-				<li><a href="#" class="active">My Profile</a></li>
-				<li><a href="#">Encontrar conexiones</a></li>
-			</ul>
-			<button class="btn">&nbsp;&nbsp;Cerrar sesión&nbsp;</button>
-		</div>
-		<div class="container">
-			<div class="Lcontainer">
-				<div class="personal">
-					<div class="top-1"></div>
-					<div class="info">
-						<img class="img-1" src="images/jane-m.jpg" alt="Jane Doe Profile">
-					</div>
-					<div class="info">
-						<h1>Jane Doe</h1>
-					</div>
-					<div style="display: flex">
-						<img
-							class="img-2"
-							src="icons/map-marker.png"
-							alt="MapMarker Icon">
-						&nbsp;&nbsp;
-						<p>Seattle</p>
-					</div>
-					<div>
-						<p class="p-1">Developer | Engineer | Problem Solver</p>
-						<p class="p-1">Masters of shadows and the internet</p>
-					</div>
-					<div>
-						<img class="img-3" src="icons/gear.png" alt="Gear Icon">
-						<a href="">edit profile</a>
-					</div>
-					<br>
+
+<head>
+	<meta charset="UTF-8">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Profile</title>
+</head>
+
+<body>
+	<div class="nav">
+		<h1 class="nav-title">
+			Perfil
+		</h1>
+		<ul class="nav-links">
+			<li><a href="#">Inicio</a></li>
+			<li><a href="#" class="active">My Profile</a></li>
+			<li><a href="#">Encontrar conexiones</a></li>
+		</ul>
+		<button class="btn">&nbsp;&nbsp;Cerrar sesión&nbsp;</button>
+	</div>
+	<div class="container">
+		<div class="Lcontainer">
+			<div class="personal">
+				<div class="top-1"></div>
+				<div class="info">
+					<img class="img-1" src="images/jane-m.jpg" alt="Jane Doe Profile">
 				</div>
-				<div class="education">
-					<div class="top-2"><p class="p-1">Education</p></div>
-					<h1>Coding Dojo - Full Stack Bootcamp</h1>
-					<p class="p-1" style="color: grey">Dec 2019 - Mar 2020</p>
-					<p class="p-1">Triple black belt in Python, MERN and C#...</p>
+				<div class="info">
+					<h1>Jane Doe</h1>
 				</div>
+				<div style="display: flex">
+					<img class="img-2" src="icons/map-marker.png" alt="MapMarker Icon">
+					&nbsp;&nbsp;
+					<p>Seattle</p>
+				</div>
+				<div>
+					<p class="p-1">Developer | Engineer | Problem Solver</p>
+					<p class="p-1">Masters of shadows and the internet</p>
+				</div>
+				<div>
+					<img class="img-3" src="icons/gear.png" alt="Gear Icon">
+					<a href="">edit profile</a>
+				</div>
+				<br>
 			</div>
-			<div class="Rcontainer">
-				<div class="connection">
-					<div class="top-2">
-						<p class="number p-1">&nbsp;2&nbsp;</p>
-						&nbsp;
-						<p class="p-1">Connection Request</p>
-					</div>
-					<br>
-					<div class="info">
-						<img
-							class="pimg"
-							src="images/todd-s.jpg"
-							alt="Todd Profile Picture">
-						<p class="p-2">Todd E</p>
-						<img class="icon" src="icons/accept-circle.png" alt="Accept Icon">
-						<img class="icon" src="icons/close-circle.png" alt="Close Icon">
-					</div>
-					<br>
-					<div class="info">
-						<img
-							class="pimg"
-							src="images/phil-s.jpg"
-							alt="Phil Profile Picture">
-						<p class="p-2">Phill K</p>
-						<img class="icon" src="icons/accept-circle.png" alt="Accept Icon">
-						<img class="icon" src="icons/close-circle.png" alt="Close Icon">
-					</div>
-					<br>
+			<div class="education">
+				<div class="top-2">
+					<p class="p-1">Education</p>
 				</div>
-				<div class="connection">
-					<div class="top-2">
-						<p class="number p-1">&nbsp;500+&nbsp;</p>
-						&nbsp;
-						<p class="p-1">Your Connections</p>
-					</div>
-					<div class="info">
-						<img
-							class="pimg"
-							src="images/adrien-s.jpg"
-							alt="Adrien Profile Picture">
-						<p class="p-2">Adrien D</p>
-					</div>
-					<div class="info">
-						<img
-							class="pimg"
-							src="images/anne-s.jpg"
-							alt="Anne Profile Picture">
-						<p class="p-2">Anne J</p>
-					</div>
-					<div class="info">
-						<img
-							class="pimg"
-							src="images/alayne-s.jpg"
-							alt="Alayne Profile Picture">
-						<p class="p-2">Alayne T</p>
-					</div>
-					<div class="info">
-						<img
-							class="pimg"
-							src="images/arry-s.jpg"
-							alt="Arry Profile Picture">
-						<p class="p-2">Arry Y</p>
-					</div>
-					<div class="bottom">
-						<a class="p-2" href="">View More</a>
-					</div>
+				<h1>Coding Dojo - Full Stack Bootcamp</h1>
+				<p class="p-1" style="color: grey">Dec 2019 - Mar 2020</p>
+				<p class="p-1">Triple black belt in Python, MERN and C#...</p>
+			</div>
+		</div>
+		<div class="Rcontainer">
+			<div class="connection">
+				<div class="top-2">
+					<p class="number p-1">&nbsp;2&nbsp;</p>
+					&nbsp;
+					<p class="p-1">Connection Request</p>
+				</div>
+				<br>
+				<div class="info">
+					<img class="pimg" src="images/todd-s.jpg" alt="Todd Profile Picture">
+					<p class="p-2">Todd E</p>
+					<img class="icon" src="icons/accept-circle.png" alt="Accept Icon">
+					<img class="icon" src="icons/close-circle.png" alt="Close Icon">
+				</div>
+				<br>
+				<div class="info">
+					<img class="pimg" src="images/phil-s.jpg" alt="Phil Profile Picture">
+					<p class="p-2">Phill K</p>
+					<img class="icon" src="icons/accept-circle.png" alt="Accept Icon">
+					<img class="icon" src="icons/close-circle.png" alt="Close Icon">
+				</div>
+				<br>
+			</div>
+			<div class="connection">
+				<div class="top-2">
+					<p class="number p-1">&nbsp;500+&nbsp;</p>
+					&nbsp;
+					<p class="p-1">Your Connections</p>
+				</div>
+				<div class="info">
+					<img class="pimg" src="images/adrien-s.jpg" alt="Adrien Profile Picture">
+					<p class="p-2">Adrien D</p>
+				</div>
+				<div class="info">
+					<img class="pimg" src="images/anne-s.jpg" alt="Anne Profile Picture">
+					<p class="p-2">Anne J</p>
+				</div>
+				<div class="info">
+					<img class="pimg" src="images/alayne-s.jpg" alt="Alayne Profile Picture">
+					<p class="p-2">Alayne T</p>
+				</div>
+				<div class="info">
+					<img class="pimg" src="images/arry-s.jpg" alt="Arry Profile Picture">
+					<p class="p-2">Arry Y</p>
+				</div>
+				<div class="bottom">
+					<a class="p-2" href="">View More</a>
 				</div>
 			</div>
 		</div>
-	</body>
+	</div>
+</body>
+
 </html>
